# ling-shu

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE-v2.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  PROGRESS_REPORT.md  README.md  RELEASE_NOTES_v5.0.0.md  RELEASE_NOTES_v5.1.0.md  SECURITY.md  deny.toml  docker-compose.yml  fix_patch.py  generate_progress_pdf.py  rustfmt.toml  start.sh
.cargo/: config.toml
.githooks/: pre-commit
.github/: known-ci-issues.md
app/: Cargo.toml  build.rs  mcp_ui.html
app/src/: api.rs  main.rs  openapi_spec.rs
app/src/api/: agents.rs  audit.rs  auth.rs  billing.rs  chat.rs  discovery.rs  eval.rs  federation.rs  full.rs  health.rs  mcp.rs  metrics.rs  mod.rs  plugins.rs
app/src/cli/: app.rs  commands.rs  logging.rs  mcp.rs  mod.rs  model.rs
app/src/grpc/: agent.rs  llm.rs  mod.rs
audit/: Cargo.toml
audit/src/: event.rs  lib.rs  log.rs  query.rs  sqlite.rs
autonomy/: Cargo.toml
autonomy/benches/: autonomy_bench.rs
autonomy/src/: evolution.rs  experience.rs  lib.rs  reflection.rs
backends/: Cargo.toml
backends/examples/: chat_agent.rs
backends/src/: agent_default.rs  embedding_fastembed.rs  embedding_openai.rs  knowledge_mem.rs  lib.rs  llm_anthropic.rs  llm_factory.rs  llm_llamacpp.rs  llm_llmkit.rs  llm_openai.rs  llm_retry.rs  memory_sqlite.rs  mock_llm.rs  traced_llm.rs  vector_memory.rs  vector_store_mem.rs  vector_store_pg.rs  vector_store_qdrant.rs  vector_store_sqlite.rs
backends/src/tools/: file_tool.rs  http_tool.rs  mod.rs  shell_tool.rs  utility_tool.rs
backends/src/workflow/: approval.rs  checkpoint.rs  dag.rs  mod.rs  planner.rs  registry.rs  sub_workflow.rs  workflow_access.rs  workflow_tools.rs
benches/: Cargo.toml
benches/src/: lingshu_benchmarks.rs
billing/: Cargo.toml
billing/benches/: billing_bench.rs
billing/src/: lib.rs  plan.rs  quota.rs  report.rs  usage.rs
cache/: Cargo.toml
cache/src/: lib.rs  memory.rs
channel/: Cargo.toml
channel/src/: discord.rs  feishu.rs  lib.rs  mcp_adapter.rs  qq.rs  registry.rs  router.rs  session_store.rs  telegram.rs  traits.rs  types.rs  wechat.rs
circuit-breaker/: Cargo.toml
circuit-breaker/src/: breaker.rs  lib.rs  sliding_window.rs  state.rs
code-analyzer/: Cargo.toml
code-analyzer/src/: analyzer.rs  extractor.rs  generator.rs  lib.rs  llm_analyzer.rs  observer.rs  scanner.rs  tool.rs
codex/: run_tasks.sh  state.json  task.json  tasks-v2.json
config/: Cargo.toml  dev.yaml  prod.yaml  test.yaml
config/src/: env.rs  lib.rs  settings.rs
core/: Cargo.toml
core/src/: context.rs  error.rs  id.rs  lib.rs
credentials/: Cargo.toml
credentials/src/: encrypted_store.rs  lib.rs  manager.rs  types.rs
credentials/tests/: store_test.rs
database/: Cargo.toml
database/src/: checkpoint.rs  lib.rs  postgres.rs  repository.rs  sqlite.rs
database/src/migrations/: 001_init.sql  002_graph_cache.sql  003_audit.sql  004_billing.sql  005_checkpoint.sql
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/src/: lib.rs  main.rs
distributed/: Cargo.toml
distributed/benches/: distributed_bench.rs
distributed/src/: cache.rs  cluster.rs  leader.rs  lib.rs  queue.rs  scheduler.rs  store.rs
docs/: AGENT_DEVICE_INTEGRATION.md  CHANNEL-ARCHITECTURE-REFERENCE.md  CHINESE_LLM_INTEGRATION.md  CI-BASELINE-DEBT.md  RFC-0052-TERMINAL-RUNTIME-ISOLATION.md  V5.2-IMPLEMENTATION-PLAN.md  book.toml
evaluator/: Cargo.toml
evaluator/benches/: evaluator_bench.rs
evaluator/src/: lib.rs  metrics.rs  regression.rs  report.rs  runner.rs  types.rs
eventbus/: Cargo.toml
eventbus/src/: bus.rs  event.rs  lib.rs  topic.rs
examples/: README.md
federation/: Cargo.toml
federation/benches/: federation_bench.rs
federation/src/: discovery.rs  executor.rs  gossip.rs  lib.rs  link.rs  migration.rs  protocol.rs  replication.rs  tls.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: credential_crypto.rs  federation_message.rs  mcp_jsonrpc.rs
k8s/: configmap.yaml  deployment.yaml  federation-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  pvc.yaml  service.yaml
knowledge-graph/: Cargo.toml
knowledge-graph/src/: builder.rs  lib.rs  memory.rs  store.rs  types.rs
llm-router/: Cargo.toml
llm-router/src/: lib.rs  metrics.rs  strategies.rs
mcp/: Cargo.toml
mcp/src/: agent_tools.rs  credential_tools.rs  discovery.rs  lib.rs  rmcp_client.rs  rmcp_server.rs  rmcp_stdio_client.rs  server.rs  server_launcher.rs  tool.rs  types.rs
memory/: Cargo.toml
memory/src/: buffer.rs  consolidation.rs  graph.rs  lib.rs  memory.rs  session.rs  summarization.rs  types.rs  vector.rs
multimodal/: Cargo.toml
multimodal/src/: audio.rs  file.rs  image.rs  lib.rs  rag.rs
observability/: Cargo.toml
observability/src/: genai.rs  health.rs  lib.rs  loki.rs  metrics.rs  otel.rs  span.rs  tracing.rs
orchestrator/: Cargo.toml
orchestrator/src/: autoagents_bridge.rs  comm.rs  lib.rs  loong_adapter.rs  orchestrator.rs  pipeline.rs  registry.rs  scheduler.rs
plugin/: Cargo.toml
plugin/src/: event.rs  hot_reload.rs  lib.rs  loader.rs  manifest.rs  market.rs  sandbox.rs  wasm.rs
polyglot/: Cargo.toml
polyglot/src/: config.rs  detect.rs  error.rs  lib.rs  runner.rs
polyglot/src/languages/: compiled.rs  interpreted.rs  mod.rs  vm.rs
prompt/: Cargo.toml
proto/: lingshu.proto
ratelimit/: Cargo.toml
runtime/: Cargo.toml
scripts/: benchmark_baseline.sh  check-features.sh  enterprise_test.sh  github_search_complete.md  github_search_final.md  github_search_report.md  github_search_results.md  github_search_results_v2.md  install-proot.sh  install.sh  load-test.sh  stress_test.sh  stress_test_k6.js
security/: Cargo.toml
storage/: Cargo.toml
swarm/: Cargo.toml
tee/: Cargo.toml
tenant/: Cargo.toml
tests/: Cargo.toml
tool/: Cargo.toml
traits/: Cargo.toml
vault/: Cargo.toml
voice/: Cargo.toml
websocket/: Cargo.toml
webui-v5/: index.html  package-lock.json  package.json  start-all.sh  start.sh  tsconfig.json  vite.config.ts
(+343 files in other folders)
