[workspace]
resolver = "2"
members = [
    "plugins/beef-plugin",
    "plugins/watch-plugin",
    "tests",
    "app",
    "core",
    "traits",
    "runtime",
    "eventbus",
    "security",
    "config",
    "storage",
    "database",
    "observability",
    "backends",
    "plugin",
    "orchestrator",
    "polyglot",
    "distributed",
    "websocket",
    "memory", "mcp", "multimodal",
    "ratelimit", "billing", "audit", "prompt",
    "knowledge-graph", "code-analyzer", "credentials",
    "evaluator",
    "federation",
    "webui",
    "llm-router",
    "cache",
    "tenant",
    "vault",
    "tee",
    "circuit-breaker",
    "benches",
]
[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lingshu Agent System — LSCode v1.0.0"
[workspace.dependencies]
serial_test = { version = "3", features = ["async"] }
jsonwebtoken = "9"
serde_yaml = "0.9"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
prost = "0.13"
futures = "0.3"
[profile.release]
opt-level = 3
