[workspace]
resolver = "2"
members = [
    "plugins/beef-plugin",
    "plugins/watch-plugin",
    "plugins/code-sandbox-plugin",
    "plugins/rag-plugin",
    "plugins/web-search-plugin",
    "plugins/scheduler-plugin",
    "plugins/agent-device-plugin",
    "plugins/simplecad-plugin",
    "tests",
    "app",
    "core",
    "traits",
    "runtime",
    "eventbus",
    "security",
    "config",
    "storage",
    "database",
    "observability",
    "backends",
    "plugin",
    "orchestrator",
    "polyglot",
    "distributed",
    "websocket",
    "memory", "mcp", "multimodal",
    "ratelimit", "billing", "audit", "prompt",
    "knowledge-graph", "code-analyzer", "credentials",
    "evaluator",
    "tool",
    "federation",
    "swarm",
    "autonomy",
    "webui",
    "llm-router",
    "cache",
    "tenant",
    "vault",
    "tee",
    "circuit-breaker",
    "benches",
    "channel",
    "voice",
    "desktop",
    "examples/swarm-basic",
    "examples/distributed-basic",
    "examples/autonomy-basic",
    "examples/full-flow",
    "examples/agent-device-demo",
    "examples/simplecad-demo",
    "crates/memory-episode",
    "crates/workflow-memory",
    "crates/evidence-graph",
    "crates/memory-workflow",
    "crates/memory-episode-sqlite",
    "crates/memory-eval",
    "crates/memory-consolidation",
    "crates/memory-semantic",
    "crates/memory-reflection",
]
[workspace.package]
version = "5.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lingshu Agent System — LSCode v1.0.0"
[workspace.dependencies]
serial_test = { version = "3", features = ["async"] }
jsonwebtoken = "9"
serde_yaml = "0.9"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
tokio-util = { version = "0.7", features = ["rt"] }
tonic = "0.12"
prost = "0.13"
futures = "0.3"
[profile.release]
opt-level = 3

[patch.crates-io]
sqlx-sqlite = { path = "crates/sqlx-sqlite-fork" }
