[package]
name = "lingshu"
version.workspace = true
edition.workspace = true
description = "Lingshu Agent System — main binary entry point"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-runtime = { path = "../runtime" }
lingshu-eventbus = { path = "../eventbus" }
lingshu-security = { path = "../security" }
lingshu-config = { path = "../config" }
lingshu-storage = { path = "../storage" }
lingshu-database = { path = "../database" }
lingshu-observability = { path = "../observability" }
lingshu-backends = { path = "../backends" }
lingshu-plugin = { path = "../plugin" }
lingshu-memory = { path = "../memory" }
lingshu-multimodal = { path = "../multimodal" }
lingshu-ratelimit = { path = "../ratelimit" }
lingshu-billing = { path = "../billing" }
lingshu-audit = { path = "../audit" }
lingshu-prompt = { path = "../prompt" }
lingshu-mcp = { path = "../mcp" }
lingshu-knowledge-graph = { path = "../knowledge-graph" }
lingshu-code-analyzer = { path = "../code-analyzer" }
lingshu-credentials = { path = "../credentials" }
lingshu-orchestrator = { path = "../orchestrator" }
lingshu-websocket = { path = "../websocket" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["signal", "sync", "net", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
dirs = "6"
mime_guess = "2"
base64 = "0.22"

# HTTP API server
axum = { version = "0.8", features = ["ws", "json", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
async-stream = "0.3"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
