[package]
name = "lingshu-audit"
version.workspace = true
edition.workspace = true
description = "LSAudit — 不可变审计日志与事件溯源系统"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-eventbus = { path = "../eventbus" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.39", features = ["bundled", "uuid", "chrono"], optional = true }

[dev-dependencies]
tracing-subscriber.workspace = true

[features]
default = []
sqlite = ["rusqlite"]
