[package]
name = "lingshu-backends"
edition.workspace = true
version.workspace = true
description = "LSBackends — Concrete implementations: OpenAI, Anthropic, Groq, VectorStore backends"

[features]
default = ["openai", "mock"]
# llmkit 统一后端: 27+ 提供商 (Anthropic, OpenAI, Google Gemini, Mistral, Groq, DeepSeek, Ollama, 等)
llmkit = ["dep:llmkit"]
# OpenAI 提供商 (LLM + Embedding)，依赖 reqwest
openai = ["dep:reqwest", "dep:futures-util"]
# Anthropic 提供商，依赖 reqwest
anthropic = ["dep:reqwest", "dep:futures-util"]
# Groq 提供商 (OpenAI 兼容格式)，依赖 reqwest
groq = ["dep:reqwest", "dep:futures-util"]
# Mock 引擎 — 零依赖，始终可用
mock = []
# VectorStore: SQLite 持久化
vector-store-sqlite = ["dep:rusqlite"]
# VectorStore: PostgreSQL 持久化
vector-store-pg = ["dep:sqlx"]

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-config = { path = "../config" }
lingshu-observability = { path = "../observability" }
lingshu-runtime = { path = "../runtime" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
meval = "0.2"
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
llmkit = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "uuid"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"], optional = true }

[dev-dependencies]
lingshu-eventbus = { path = "../eventbus" }
lingshu-observability = { path = "../observability", features = ["metrics", "http"] }
tracing-subscriber.workspace = true
tempfile = "3"
