[package]
name = "lingshu-billing"
version.workspace = true
edition.workspace = true
description = "LSBilling — Token 级用量跟踪与计费系统"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
dashmap = "6"

[dev-dependencies]
tracing-subscriber.workspace = true
