[package]
name = "lingshu-core"
version.workspace = true
edition.workspace = true
description = "LSCore — Lingshu core types: LsId, LsError, LsResult, LsContext"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
