[package]
name = "lingshu-credentials"
version.workspace = true
edition.workspace = true
description = "LSCredentials — multi-Git-provider credential vault with encrypted storage"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-security = { path = "../security" }
lingshu-storage = { path = "../storage" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
