[package]
name = "lingshu-desktop"
version = "0.1.0"
edition = "2021"
description = "Lingshu Desktop — Tauri 桌面客户端"

[lib]
name = "lingshu_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"

lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu = { path = "../app" }

serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
