[package]
name = "lingshu-distributed"
version.workspace = true
edition.workspace = true
description = "LSDistributed — Distributed runtime: cluster, leader election, queue, cache, store"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-eventbus = { path = "../eventbus" }
lingshu-observability = { path = "../observability" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio"] }
