[package]
name = "lingshu-federation"
version.workspace = true
edition.workspace = true
description = "LSFed — 跨集群联邦通信: 发现、连接、远程 Agent 执行、状态复制"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-plugin = { path = "../plugin" }
lingshu-distributed = { path = "../distributed" }
lingshu-mcp = { path = "../mcp" }
lingshu-websocket = { path = "../websocket" }
lingshu-security = { path = "../security" }
lingshu-observability = { path = "../observability" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net", "io-util"] }
tokio-util = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
dashmap = "6"
bincode = { version = "1", optional = true }
fastrand = { version = "2", optional = true }
futures.workspace = true

# TLS (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
gossip = ["dep:fastrand"]
migration = ["dep:bincode"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_futures", "async_tokio"] }
tracing-subscriber.workspace = true


[[bench]]
name = "federation_bench"
harness = false
