[package]
name = "lingshu-knowledge-graph"
version.workspace = true
edition.workspace = true
description = "LSKnowledgeGraph — 知识图谱引擎: 节点/边类型系统、图构建、查询、分层、导览"

[dependencies]
lingshu-core = { path = "../core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.39", features = ["bundled"] }

[dev-dependencies]
tracing-subscriber.workspace = true
