[package]
name = "lingshu-llm-router"
version.workspace = true
edition.workspace = true
description = "Multi-LLM Router — dynamic provider selection, fallback, cost-aware routing"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-config = { path = "../config" }
lingshu-backends = { path = "../backends" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
