[package]
name = "lingshu-mcp"
version.workspace = true
edition.workspace = true
description = "Lingshu MCP (Model Context Protocol) — 协议类型、工具适配与服务器"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
