[package]
name = "lingshu-mcp"
version.workspace = true
edition.workspace = true
description = "Lingshu MCP (Model Context Protocol) — 协议类型、工具适配与服务器"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
lingshu-websocket = { path = "../websocket" }
lingshu-credentials = { path = "../credentials" }
rmcp = { version = "0.1", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
axum = { version = "0.7", features = ["macros"], optional = true }

[features]
default = []
# 启用 rmcp 标准 MCP 协议支持 (Service + Client)
rmcp = ["dep:rmcp", "dep:reqwest", "dep:tokio-tungstenite", "dep:axum"]

[dev-dependencies]
tempfile = "3.5"
