[package]
name = "lingshu-memory"
version.workspace = true
edition.workspace = true
description = "LSMemory — dual storage memory system: short-term buffer + long-term vector"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-storage = { path = "../storage" }
lingshu-knowledge-graph = { path = "../knowledge-graph" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
