[package]
name = "lingshu-observability"
version.workspace = true
edition.workspace = true
description = "LSObservability — Tracing, metrics, health checks per LSCode v1.0.0"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-config = { path = "../config" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync", "time", "net"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
thiserror.workspace = true
uuid.workspace = true
opentelemetry = { version = "0.27", features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
prometheus = { version = "0.13", features = ["process"], optional = true }
once_cell = "1"
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

[features]
default = ["metrics", "http"]
metrics = ["dep:prometheus"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
http = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]
full = ["metrics", "otel", "http"]
