[package]
name = "lingshu-orchestrator"
version.workspace = true
edition.workspace = true
description = "LSOrchestrator — Multi-Agent Orchestrator: registry, scheduling, communication, delegation"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-eventbus = { path = "../eventbus" }
lingshu-runtime = { path = "../runtime" }
lingshu-observability = { path = "../observability" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true
