[package]
name = "lingshu-orchestrator"
version.workspace = true
edition.workspace = true
description = "LSOrchestrator — Multi-Agent Orchestrator: registry, scheduling, communication, delegation"

[dependencies]
lingshu-core = { path = "../core" }
lingshu-traits = { path = "../traits" }
lingshu-eventbus = { path = "../eventbus" }
lingshu-runtime = { path = "../runtime" }
lingshu-code-analyzer = { path = "../code-analyzer" }
lingshu-knowledge-graph = { path = "../knowledge-graph" }
lingshu-observability = { path = "../observability" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
thiserror.workspace = true

# ── Optional external integrations ──
autoagents = { git = "https://github.com/liquidos-ai/AutoAgents.git", optional = true }
loong = { git = "https://github.com/eastreams/loong.git", optional = true }

[features]
autoagents = ["dep:autoagents"]
loong = ["dep:loong"]
